--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,13 @@
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/btnOk" />
 
-    <Button
-        android:layout_width="wrap_content"
+    <ImageButton
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Reconoce"
         android:id="@+id/btnReconoce"
+        android:src="@android:drawable/presence_audio_online"
         android:layout_below="@+id/title_text"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="31dp"
-        android:layout_alignEnd="@+id/txtRequest" />
+        android:layout_marginTop="25dp" />
 
 </RelativeLayout>
