--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -51,4 +52,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="25dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btnMapa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:src="@android:drawable/ic_dialog_map"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/lblResponse"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:backgroundTint="@color/primary_dark" />
 </RelativeLayout>
