Incorporado Algoritmo Genetico Manualmente

--- a/app/src/main/res/layout/activity_invitado.xml
+++ b/app/src/main/res/layout/activity_invitado.xml
@@ -51,7 +51,7 @@
             android:id="@+id/radioEducacionTer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Terciario"
+            android:text="Terciario/Universitario"
             />
 
     </RadioGroup>
